# marvin

./: .gitignore  Dockerfile  Install docker.md  README.md  TODO.md  build.sh  connect.ps1  connect.sh  howto.md  instructions.md  requirements.txt  robot.xml  run.ps1  run.sh  setup.ps1  setup.sh
config/: bashrc  docker_tmux  vimrc
docker/: Dockerfile  README.md  bashrc  build.sh  entrypoint.sh  run.sh  tmux.conf
docker/config/: download-docker-desktop.sh
docker/source/: example.py
docs/: log.md  weight_estimates.md
examples/: draw_circle.py  turtle_controller.py
source/examples/: pose_subscriber.py
source/marvin_ackermann_control/: CMakeLists.txt  package.xml
source/marvin_ackermann_description/: CMakeLists.txt  package.xml
source/marvin_ackermann_gazebo/: CMakeLists.txt  package.xml
source/marvin_ackermann_gazebo_control/: CMakeLists.txt  package.xml
source/marvin_control/: CMakeLists.txt  README.md  package.xml
source/marvin_controller/: CMakeLists.txt  package.xml
source/marvin_description/: CMakeLists.txt  README.md  package.xml
source/marvin_gazebo/: package.xml
source/marvin_model/: CMakeLists.txt  package.xml  second_marvin.urdf.xacro
source/marvin_plan/: CMakeLists.txt  README.md  hermit_curves_movement.py  movement_to_point.py  package.xml
source/urdf_test/: first_marvin.urdf  first_marvin.xacro  multiple_shapes.urdf  my_robot.urdf  second_marvin.urdf.xacro  test_xacro.xacro  xacro_result.urdf
src/carbot_gazebo_control/: package.xml
src/marvin_control/: CMakeLists.txt  package.xml
src/marvin_description/: CMakeLists.txt  (+1 more)
(+69 files in other folders)
