<?xml version="1.0"?>
<package format="2">
  <name>marvin_controller</name>
  <version>0.0.0</version>
  <description>The marvin_controller package</description>
  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <export>
  </export>
</package>
